test/libsolidity/syntaxTests/nameAndTypeResolution/130_enum_implicit_conversion_is_not_okay_256.sol
contract test {
    enum ActionChoices { GoLeft, GoRight, GoStraight, Sit }
    constructor() public {
        a = ActionChoices.GoStraight;
    }
    uint256 a;
}
// ----
// TypeError: (115-139): Type enum test.ActionChoices is not implicitly convertible to expected type uint256.
